@@ -222,6 +222,7 @@ private:
 	int CalcDistance(const numbered_iterator& From, const numbered_iterator& To) const;
 	void PasteFromClipboard();
 	void Paste(const string& Data);
+	void ProcessChar(wchar_t Char);
 	void Copy(int Append);
 	void DeleteBlock();
 	void UnmarkBlock();
