@@ -1,4 +1,11 @@
-﻿drkns 28.12.2015 17:59:08 +0200 - build 4495
+﻿w17 29.12.2015 13:10:24 +0300 - build 4496
+
+1. Копирование/вставка текста содержащего символ(ы) '\0' в редакторе.
+   При копировании текста в буфер обмена, если в нём содержатся нулевые символы,
+   создаётся дополнительный 4-х байтовый блок, куда записывается длина текста.
+   Тип блока 'Notepad++ binary text length', должен быть совместим с Paste Special notepad++.
+
+drkns 28.12.2015 17:59:08 +0200 - build 4495
 
 1. Каталог %farlocalproflie%\PluginsData не создавался автоматически, что могло приводить к последствиям.
 
